--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -18,7 +18,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 
-/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'], */ /* ! */
+/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], */ .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
 
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
@@ -543,73 +543,59 @@
 .phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367']
   {background: #777 ; color: white ; } 
-  /*  #popup-amharic-extra-K_SLASH+shift */
 
 
-/* punctuation layer */
-#punctuation-K_1 .kmw-key-popup-icon,  #punctuation-K_2 .kmw-key-popup-icon,  #punctuation-K_3 .kmw-key-popup-icon,  
-#punctuation-K_4 .kmw-key-popup-icon,  #punctuation-K_5 .kmw-key-popup-icon,  #punctuation-K_6 .kmw-key-popup-icon,  
-#punctuation-K_7 .kmw-key-popup-icon,  #punctuation-K_8 .kmw-key-popup-icon,  #punctuation-K_9 .kmw-key-popup-icon,  
-#punctuation-K_0 .kmw-key-popup-icon,
+/* change hint color for colored keys */
 
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136A']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136B']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136C']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136D']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136E']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_136F']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1370']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1371']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1372']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_1']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_2']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_3']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_4']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_5']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_6']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_7']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_8']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_9']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_0']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id='default-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id='default-K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='T_ግዕዝ']  div.kmw-key-popup-icon.kmw-key-text, 
-.phone.android div.kmw-key.kmw-key-default[id$='T_ካዕብ']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_ሣልስ']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_ራብዕ']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_ኃምስ']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_1369']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136A']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136B']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136C']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136D']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136E']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_136F']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_1370']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_1371']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='extra-U_1372']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1361']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_ግዕዝ']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='T_ካዕብ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_ሣልስ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_ራብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_ኃምስ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='T_BANG']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_1362']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='_1360']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='_1361']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='_1362']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='K_2+shift']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='K_4+shift']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='K_SLASH']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='K_SLASH+shift']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_00AB']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='T_00BB']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_BANG']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='T_1360']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_2+shift']  div.kmw-key-popup-icon.kmw-key-text,
 
-/* Tablet */
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ግዕዝ']  div.kmw-key-popup-icon.kmw-key-text, 
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ካዕብ']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ሣልስ']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ራብዕ']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ኃምስ']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='_00AB']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='_00BB']  div.kmw-key-popup-icon.kmw-key-text,
 
-.tablet.android div.kmw-key.kmw-key-default[id$='K_1']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_2']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_3']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_4']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_5']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_6']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_7']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_8']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_9']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_0']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
-
-.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_00AB']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_00BB']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1361']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='U_1362']  div.kmw-key-popup-icon.kmw-key-text,
-.tablet.android div.kmw-key.kmw-key-default[id$='K_1+shift']  div.kmw-key-popup-icon.kmw-key-text
-{color: #777 ; }
+/* phone only */
+div.kmw-key.kmw-key-default[id='latin-punct-layer-K_SLASH'] div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id='latin-punct-layer-K_SLASH+shift'] div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-icon.kmw-key-text
+{color:  #777 ; }
 
 /* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], */
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH'],
@@ -680,3 +666,4 @@
   border-color: #d0d3d9;
   border-style: solid;
 }
+
