--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -18,7 +18,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 
-/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], */ .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
+/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'],  .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
 
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
@@ -40,7 +40,19 @@
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1366'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1366'], /* ፦ */
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1367'], /* ፧ */
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1360'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1360'], /* ፠ */
-.phone div.kmw-key.kmw-key-default[id$='extra-U_1368'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1368']  /* ፨ */
+.phone div.kmw-key.kmw-key-default[id$='extra-U_1368'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1368'], /* ፨ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1361'], /* ፡ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1363'], /* ፣ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1364'], /* ፤ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1366'], /* ፦ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_00AB'], /* « */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_00BB'], /* » */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1361'], /* ፡ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1363'], /* ፣ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1364'], /* ፤ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1366'], /* ፦ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_00AB'], /* « */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_00BB']  /* » */
   { background:  #f4eee7 ; color: black ; }
 
 /* amharic-extra layer: western numerals */
@@ -540,8 +552,8 @@
 .android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift,
 .android .kmw-keyboard-gff_amharic #amharic-extra-K_SLASH\+shift , .phone.android .kmw-keyboard-gff_amharic #amharic-extra-2-K_SLASH\+shift,
 .phone.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'],
-.phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'],
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367']
+.phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift']
+/* .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367'] */
   {background: #777 ; color: white ; } 
 
 
@@ -582,8 +594,8 @@ div.kmw-key.kmw-key-default[id$='_1360']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='_1361']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='_1362']  div.kmw-key-popup-icon.kmw-key-text,
 
-div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='T_BANG']  div.kmw-key-popup-icon.kmw-key-text,
 
 div.kmw-key.kmw-key-default[id$='K_2+shift']  div.kmw-key-popup-icon.kmw-key-text,
