--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -139,7 +139,13 @@
 .phone div.kmw-key.kmw-key-default[id$='K_P'], .tablet div.kmw-key.kmw-key-default[id$='K_P'],
 .phone div.kmw-key.kmw-key-default[id$='U_1362'], .tablet div.kmw-key.kmw-key-default[id$='U_1362'],
 .phone div.kmw-key.kmw-key-default[id$='T_1280'], .tablet div.kmw-key.kmw-key-default[id$='T_1280'],
-.phone div.kmw-key.kmw-key-default[id$='K_NUMLOCK'], .tablet div.kmw-key.kmw-key-default[id$='K_NUMLOCK'] 
+.phone div.kmw-key.kmw-key-default[id$='K_NUMLOCK'], .tablet div.kmw-key.kmw-key-default[id$='K_NUMLOCK'] ,
+.phone div.kmw-key.kmw-key-default[id$='U_1361'],
+.phone div.kmw-key.kmw-key-default[id$='U_1363'],
+.phone div.kmw-key.kmw-key-default[id$='U_1364'],
+.phone div.kmw-key.kmw-key-default[id$='U_1366'],
+.phone div.kmw-key.kmw-key-default[id$='U_00AB'],
+.phone div.kmw-key.kmw-key-default[id$='U_00BB']
 /* { background: #ece1d5  ; color: black; } */
   { background: #f3d6ce ; color: black; }
 
@@ -161,8 +167,9 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_LOPT'], .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'], .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
-.phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
+.phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-deadkey[id$='T_EMPTY'], .tablet div.kmw-key.kmw-key-deadkey[id$='T_EMPTY'],
+
 .kmw-keyboard-gff_mesobe_fidelat #default-U_12CB
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
@@ -577,3 +584,30 @@
     background: #ffffff;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
   }
+
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20BD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A5'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A2'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A3'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20A9'],
+/*
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1361'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1363'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1364'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1366'],
+*/
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_PERIOD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2018'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_BKSLASH'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20AC'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_135E'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00AB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_4+shift']
+{
+  border-color: #d0d3d9;
+  border-style: solid;
+  border-width: 1px;
+}
