--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -431,7 +431,11 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134F'], .tablet div.kmw-key.kmw-key-default[id$='U_134F'], /* ፏ */
 .phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
 .phone div.kmw-key.kmw-key-default[id$='T_WWA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWA']
-  { background:  #e1cec9  ; color: black; }
+ /* { background:  #e1cec9  ; color: black; } */
+    {
+    background: #ffffff;  color: black ;
+    background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
+  }
 
 /* ዘመደ-ግዕዝ */
 .phone div.kmw-key.kmw-key-default[id$='U_1248'], .tablet div.kmw-key.kmw-key-default[id$='U_1248'],  /* ቈ */
@@ -471,7 +475,8 @@
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU']
   {
     background: #ffffff; color: black ;
-    background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
+    background: linear-gradient(180deg, #ffffff 0%, #ffffb5 100%);
+    /* background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%); */
   }
 
 /* ዘመደ-ሣልስ */
